<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentFuncionario"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FuncionarioFragment">

    <EditText
        android:id="@+id/etCodigoFunc"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:ems="10"
        android:hint="@string/codigo"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/btnBuscarFunc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTituloFunc" />

    <Button
        android:id="@+id/btnBuscarFunc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:text="@string/buscar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etCodigoFunc"
        app:layout_constraintTop_toBottomOf="@+id/tvTituloFunc" />

    <EditText
        android:id="@+id/etNomeFunc"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="35dp"
        android:ems="10"
        android:hint="@string/nome"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCodigoFunc" />

    <EditText
        android:id="@+id/etDocumentoFunc"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="35dp"
        android:ems="10"
        android:hint="@string/documento"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNomeFunc" />

    <Spinner
        android:id="@+id/spCargoFunc"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDocumentoFunc" />

    <EditText
        android:id="@+id/etSalarioFunc"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="35dp"
        android:ems="10"
        android:hint="@string/salario"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spCargoFunc" />

    <Button
        android:id="@+id/btnInserirFunc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="20dp"
        android:text="@string/inserir"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSalarioFunc" />

    <Button
        android:id="@+id/btnModificarFunc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="1dp"
        android:text="@string/modificar"
        app:layout_constraintEnd_toEndOf="@+id/btnListarFunc"
        app:layout_constraintTop_toBottomOf="@+id/etSalarioFunc" />

    <Button
        android:id="@+id/btnExcluirFunc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/excluir"
        app:layout_constraintStart_toStartOf="@+id/btnInserirFunc"
        app:layout_constraintTop_toBottomOf="@+id/btnInserirFunc" />

    <Button
        android:id="@+id/btnListarFunc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="35dp"
        android:text="@string/listar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnModificarFunc" />

    <ScrollView
        android:layout_width="405dp"
        android:layout_height="157dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnExcluirFunc">

        <TextView
            android:id="@+id/tvListarFunc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical" />
    </ScrollView>

    <TextView
        android:id="@+id/tvTituloFunc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/funcionario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
